--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 ._*
 
 ## User settings
-#xcuserdata/
+xcuserdata/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
