--- a/TestService/Info.plist
+++ b/TestService/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleName</key>
 	<string>TestService</string>
 	<key>CFBundlePackageType</key>
-	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
+	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -28,18 +28,26 @@
 			<string>TestService</string>
 			<key>IOMatchCategory</key>
 			<string>TestService</string>
-			<key>IOProbeScore</key>
-			<integer>10000</integer>
 			<key>IOProviderClass</key>
-			<string>IOResource</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>IOUSBHostDevice</string>
+			<key>IOUserClientClass</key>
+			<string>ItlNetworkUserClient</string>
+			<key>idProduct</key>
+			<integer>30209</integer>
+			<key>idVendor</key>
+			<integer>5263</integer>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 lhy. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
+		<key>com.apple.iokit.IONetworkingFamily</key>
+		<string>3.2</string>
+		<key>com.apple.iokit.IOUSBHostFamily</key>
+		<string>1.2</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>16.7</string>
 		<key>com.apple.kpi.iokit</key>
 		<string>16.7</string>
 		<key>com.apple.kpi.libkern</key>
